reference-llvm/tests/should-fail/fail29.mu
// cannot be variable

function @entry foo() {
    foo;
}
